--- a/todo-one/package.json
+++ b/todo-one/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.3",
     "@vitejs/plugin-vue": "^5.0.3",
-    "vite": "^5.0.11"
+    "@vue/test-utils": "^2.4.4",
+    "happy-dom": "^13.4.1",
+    "vite": "^5.0.11",
+    "vitest": "^1.3.1"
   }
 }
